--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,11 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.9.0</version>
+        </dependency>
     </dependencies>
 
 </project>
